Table filled, formatting WIP

--- a/index.html
+++ b/index.html
@@ -1,16 +1,28 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title></title>
+    <title>Web Data To Excel Demonstration</title>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta content="" name="description" />
     <meta content="" name="keywords" />
     <link href="src/css/bootstrap.min.css" rel="stylesheet" />
     <link href="src/css/bootstrap-icons.css" rel="stylesheet" />
+    <link href="src/css/index.css" rel="stylesheet" />
   </head>
   <body>
-    <h1>Hello World</h1>
+    <h1>Web Data To Excel Demonstration</h1>
+    <table id="employee-table">
+      <tr>
+        <th>First Name</th>
+        <th>Last Name</th>
+        <th>Position</th>
+        <th>Department</th>
+        <th>Salary</th>
+        <th>Sales This Year</th>
+      </tr>
+    </table>
+    <button class="btn btn-primary">Generate Excel File</button>
     <script src="src/js/jquery-3.6.1.min.js"></script>
     <script src="src/js/bootstrap.min.js"></script>
     <script src="src/js/script.js"></script>
